Fix css on small screens

--- a/src/app.css
+++ b/src/app.css
@@ -5,3 +5,7 @@
 a {
 	@apply !underline;
 }
+
+.drawing-board-controls {
+	@apply !border-spacing-0 md:!border-spacing-2;
+}
